# kivc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENCE-MIT  README.md
.github/workflows/: ci-develop.yml  ci-main.yml  pr-check.yml
crates/kivc/: Cargo.toml
crates/kivc/src/: main.rs
crates/kivc_ast/: Cargo.toml
crates/kivc_ast/src/: lib.rs
crates/kivc_codegen/: Cargo.toml
crates/kivc_codegen/src/: lib.rs
crates/kivc_diagnostics/: Cargo.toml
crates/kivc_diagnostics/src/: lib.rs
crates/kivc_driver/: Cargo.toml
crates/kivc_driver/src/: lib.rs
crates/kivc_hir/: Cargo.toml
crates/kivc_hir/src/: lib.rs
crates/kivc_hir_lowering/: Cargo.toml
crates/kivc_hir_lowering/src/: lib.rs
crates/kivc_lexer/: Cargo.toml
crates/kivc_lexer/src/: lib.rs
crates/kivc_lir/: Cargo.toml
crates/kivc_lir/src/: lib.rs
crates/kivc_lir_gen/: Cargo.toml
crates/kivc_lir_gen/src/: lib.rs
crates/kivc_mir/: Cargo.toml
crates/kivc_mir/src/: lib.rs
crates/kivc_mir_build/: Cargo.toml
crates/kivc_mir_build/src/: lib.rs
crates/kivc_mir_opt/: Cargo.toml
crates/kivc_mir_opt/src/: lib.rs
crates/kivc_parser/: Cargo.toml
crates/kivc_parser/src/: lib.rs
crates/kivc_resolver/: Cargo.toml
crates/kivc_resolver/src/: lib.rs
crates/kivc_runtime/: Cargo.toml
crates/kivc_runtime/src/: lib.rs
crates/kivc_session/: Cargo.toml
crates/kivc_session/src/: lib.rs
crates/kivc_span/: Cargo.toml
crates/kivc_span/src/: lib.rs
crates/kivc_test_utils/: Cargo.toml
crates/kivc_test_utils/src/: lib.rs
crates/kivc_token/: Cargo.toml
crates/kivc_token/src/: lib.rs
crates/kivc_typeck/: Cargo.toml
crates/kivc_typeck/src/: lib.rs
crates/kivc_utils/: Cargo.toml
crates/kivc_utils/src/: lib.rs
